Image edit Sliders Title

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
 
       <div class="row">
-        <div clas="main" class="col-md-12">
+        <div class="main" class="col-md-12">
           <h1 class="lead"> CityAdvisor.co.uk</h1>
 
           <div class="main_banner">
@@ -38,54 +38,79 @@
       <div class="destinations">
 
         <div class="row">
-          <div class="col-md-4">
-          <img src="img/london_mod.jpg">  
-          </div>
+      
+          <a href="https://www.google.co.uk/search?q=london&oq=london&aqs=chrome..69i57j69i60l3j0l2.1481j0j7&sourceid=chrome&es_sm=91&ie=UTF-8">
+            <div class="col-md-4">
+              <span class="caption"> London </span>
+              <img src="img/london_mod.jpg">  
+            </div>
+          </a>
 
-          <div class="col-md-4">
-          <img src="img/manchester_mod.jpg">  
-          </div>
+          <a href="https://www.google.co.uk/search?q=london&oq=london&aqs=chrome..69i57j69i60l3j0l2.1481j0j7&sourceid=chrome&es_sm=91&ie=UTF-8">
+            <div class="col-md-4">
+              <span class="caption"> Manchester </span>
+              <img src="img/manchester_mod.jpg">  
+            </div>
+          </a>
 
-          <div class="col-md-4">
-          <img src="img/oxford_mod.jpg">  
-          </div>
+          <a href="https://www.google.co.uk/search?q=london&oq=london&aqs=chrome..69i57j69i60l3j0l2.1481j0j7&sourceid=chrome&es_sm=91&ie=UTF-8">
+            <div class="col-md-4">
+              <span class="caption"> Oxford </span>
+              <img src="img/oxford_mod.jpg">  
+            </div>
+          </a>
+
         </div>
 
         <div class="row">
-          <div class="col-md-4">
-          <img src="img/glasgow_mod.jpg">  
-          </div>
 
-          <div class="col-md-4">
-          <img src="img/cambridge_mod.jpg">  
-          </div>
+          <a href="https://www.google.co.uk/search?q=london&oq=london&aqs=chrome..69i57j69i60l3j0l2.1481j0j7&sourceid=chrome&es_sm=91&ie=UTF-8">
+            <div class="col-md-4">
+              <span class="caption"> Glasgow </span>
+              <img src="img/glasgow_mod.jpg">  
+            </div>
+          </a>
 
-          <div class="col-md-4">
-          <img src="img/birmingham_mod.jpg">  
-          </div>
-        </div>
+          <a href="https://www.google.co.uk/search?q=london&oq=london&aqs=chrome..69i57j69i60l3j0l2.1481j0j7&sourceid=chrome&es_sm=91&ie=UTF-8">
+            <div class="col-md-4">
+              <span class="caption"> Cambridge </span>
+              <img src="img/cambridge_mod.jpg">  
+            </div>
+          </a>
+
+          <a href="https://www.google.co.uk/search?q=london&oq=london&aqs=chrome..69i57j69i60l3j0l2.1481j0j7&sourceid=chrome&es_sm=91&ie=UTF-8">
+            <div class="col-md-4">
+              <span class="caption"> Birmingham </span>
+              <img src="img/birmingham_mod.jpg">  
+            </div>
+          </a>
+
+        </div> 
 
         <div class="row">
-          <div class="col-md-4">
-          <img src="img/liverpool_mod.jpg">  
-          </div>
 
-          <div class="col-md-4">
-          <img src="img/brighton_mod.jpg">  
-          </div>
+          <a href="https://www.google.co.uk/search?q=london&oq=london&aqs=chrome..69i57j69i60l3j0l2.1481j0j7&sourceid=chrome&es_sm=91&ie=UTF-8">
+            <div class="col-md-4">
+              <span class="caption"> Liverpool </span>
+              <img src="img/liverpool_mod.jpg">  
+            </div>
+          </a>
 
-          <div class="col-md-4">
-          <img src="img/edinburgh_mod.jpg">  
-          </div>
-        </div>
+          <a href="https://www.google.co.uk/search?q=london&oq=london&aqs=chrome..69i57j69i60l3j0l2.1481j0j7&sourceid=chrome&es_sm=91&ie=UTF-8">
+            <div class="col-md-4">
+              <span class="caption"> Brighton </span>
+              <img src="img/brighton_mod.jpg">  
+            </div>
+          </a>
+
+          <a href="https://www.google.co.uk/search?q=london&oq=london&aqs=chrome..69i57j69i60l3j0l2.1481j0j7&sourceid=chrome&es_sm=91&ie=UTF-8">
+            <div class="col-md-4">
+              <span class="caption"> Edinburgh </span>
+              <img src="img/edinburgh_mod.jpg">  
+            </div>
+          </a>
 
       </div>
-
-
-
-
-
-
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
